--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,9 @@
 * {
   box-sizing: border-box;
 }
-
+ul{
+list-style: none;
+}
 body {
   margin: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -11,4 +13,71 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+}
+.item{
+  width: 392px;
+  background-color: #F6F6FE;
+  border-radius: 8px;
+  padding: 16px;
+ margin-bottom: 24px;
+ display: flex;
+ flex-direction: column;
+
+}
+.item h2{
+  margin: 0 0 16px 0;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
+ color:#2E2F42;
+}
+.item ul{
+  display: flex;
+    flex-direction: column;
+    gap: 8px;
+    align-items: flex-end;
+
+}
+.item ul li{
+  border: 1px solid #808080;
+  border-radius: 4px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #2E2F42;
+  width: 360px;
+  height: 40px;
+  padding-left: 16px;
+  padding-top:8px;
+
+}
+.gallery{
+   display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    gap: 24px;
+    list-style: none;
+}
+.gallery li {
+  width: calc((100% - 48px) / 3);
+}
+.gallery img {
+display: block;
+width: 100%;
+height: 300px;
+}
+#name-input{
+  width: 360px;
+    height: 40px;
+    border-radius: 4px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #2E2F42;
+padding: 16px 8px;
+}
+#name-output{
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
 }
