--- a/css/common.css
+++ b/css/common.css
@@ -81,3 +81,52 @@ padding: 16px 8px;
     font-size: 24px;
     line-height: 32px;
 }
+.login-form{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.label-email{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color:#2E2F42;
+}
+.label-password{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-weight: 400;
+ font-size: 16px;
+ line-height: 24px;
+color: #2E2F42;
+    
+      }
+.email{
+width: 360px;
+height: 40px;
+border-radius: 4px;
+ }
+ .password{
+  width: 360px;
+    height: 40px;
+    border-radius: 4px;
+ }
+ .btn-submit{
+width: 86px;
+  height: 40px;
+  border-radius: 8px;
+  padding-top: 8px;
+  padding-right: 16px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  background-color: #4E75FF;
+  color:#ffffff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+ }
+      
